# MCP

./: .gitignore  README.md  mcp.pages
Financial-Dashboard/: .env.example  .gitignore  NEWSLETTER.md  README.md  agent_config.yaml  requirements.txt
Financial-Dashboard/agents/: common.py  email_sync.py  transaction_parser.py
Financial-Dashboard/data/: metrics.py  storage.py
Financial-Dashboard/scripts/: get_google_token.py
Financial-Dashboard/ui/: dashboard.py
MCP-Course/: hello_mcp.py  pyproject.toml
MCP-Finance/: agent_config.yaml  news_feeds.yaml  orchestrator.py
MCP-Finance-selfReview/: README.md  news-server.py  orchestrator.py  requirements.txt
MCP-Finance-selfReview-streamlit/: README.md  agent_config.yaml  app.py  news-server.py  news_feeds.yaml  orchestrator.py  requirements.txt
MCP-Finance-selfReview-streamlit/agents/: .env.example  common.py  news_agent.py  review_agent.py
MCP-Finance-selfReview/agents/: __init__.py  analysis_agent.py  common.py  review_agent.py
MCP-Finance/agents/: __init__.py  analysis_agent.py  common.py  news_agent.py  tracer.py
MCP-Server-Agent-Both_Local/: README.md  mcp-news-server.py  mcpclient_local.py  mcpserver_local.py  multi_mcp_agent.py  multi_mcp_agent_langchain.py  requirements.txt
MCP_Client/: client.py  client_sse.py  client_stdio.py  pyproject.toml  readme.md
MCP_Client/servers/: math_server.py  weather_server.py
weather/: pyproject.toml  weather.py
