[tool.poetry]
name = "weathermcp"
version = "0.1.0"
description = ""
authors = ["Pramod Modi <pramodkmodi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
mcp = {extras = ["cli"], version = "^1.12.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
